--- a/resources/css/gaz.css
+++ b/resources/css/gaz.css
@@ -1,5 +1,9 @@
+body, html {
+    height: 100%;
+}
+
 #map {
-    height: 600px;
+    height: 100%;
     z-index: 0;
 }
 
@@ -27,7 +31,6 @@
 
 .headdingTxt {
     font-size: x-large;
-
 }
 
 #CountryNameDrop_down {
@@ -206,3 +209,4 @@ table a:active {
     max-height: 70vh;
     overflow-y: auto;
 }
+
